passing terraform versions to template

--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -41,6 +41,7 @@ stages:
       workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/infra-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
+      terraformVersion: 1.2.6
 
   - template: azdo/template-terraform-deploy-stage.yml@templates
     parameters:
@@ -58,6 +59,7 @@ stages:
       workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/vm-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
+      terraformVersion: 1.2.6
       dependsOn: [deploy_inf]
 
   - stage: Test
@@ -96,6 +98,7 @@ stages:
       workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/vm-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
+      terraformVersion: 1.2.6
       dependsOn: [test]
 
   - template: azdo/template-terraform-destroy-stage.yml@templates
@@ -114,4 +117,5 @@ stages:
       workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/infra-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
+      terraformVersion: 1.2.6
       dependsOn: [test, destroy_vms]
