--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -76,7 +76,7 @@ stages:
             azureSubscription: scVLZ
             scriptType: filepath
             scriptPath: "$(System.DefaultWorkingDirectory)/tests/invoke-pester.ps1"
-            scriptArguments: "-Path $(System.DefaultWorkingDirectory)/tests/tests.ps1"
+            scriptArguments: "-Path tests.ps1"
             workingDirectory: $(System.DefaultWorkingDirectory)/tests
             TargetAzurePs: latestVersion
 
