--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -17,7 +17,7 @@ resources:
     - repository: templates
       type: github
       name: ministryofjustice/staff-infrastructure-alz-ci-templates
-      ref: refs/head/main
+      ref: refs/heads/main
       endpoint: staff-infrastructure-alz-ci-templates
 
 variables:
