Replacing rather than injecting new doc content

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         working-dir: alz-linux-vm, alz-win-vm
         output-file: README.md
-        output-method: inject
+        output-method: replace
         git-push: "true"
