--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -17,8 +17,7 @@ resources:
     - repository: templates
       type: github
       name: ministryofjustice/staff-infrastructure-alz-ci-templates
-      #ref: refs/heads/main
-      ref: simplify_command_opts
+      ref: refs/heads/main
       endpoint: staff-infrastructure-alz-ci-templates
 
 variables:
