dependabot config and versions.tf changes

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,13 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "terraform"
+    directory: "/tests/terraform/"
+    schedule:
+      interval: "weekly"
+      day: "sunday"
+    open-pull-requests-limit: 5 # default, let's see how we go
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"] # let's have more control over major changes
