--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -17,7 +17,7 @@ resources:
     - repository: templates
       type: github
       name: ministryofjustice/staff-infrastructure-alz-ci-templates
-      ref: refs/heads/main
+      ref: destroy_task_checkout_templates #refs/heads/main
       endpoint: staff-infrastructure-alz-ci-templates
 
 variables:
@@ -65,6 +65,7 @@ stages:
       terraformVersion: 1.2.6
       dependsOn: [deploy_inf]
 
+  # Note that working dirs in this stage are different as they don't checkout the CI templates repo.
   - stage: Test
     dependsOn: deploy_vms
     jobs:
@@ -74,7 +75,7 @@ stages:
             inputs:
               azureSubscription: scVLZ
               scriptType: InlineScript
-              workingDirectory: $(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests
+              workingDirectory: $(System.DefaultWorkingDirectory)/tests
               TargetAzurePs: latestVersion
               Inline: |
                 Install-Module -Name Pester -Force -SkipPublisherCheck
@@ -83,7 +84,7 @@ stages:
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: "NUnit"
-              testResultsFiles: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/testResults.xml"
+              testResultsFiles: "$(System.DefaultWorkingDirectory)/tests/testResults.xml"
               failTaskOnFailedTests: false
 
   - template: azdo/template-terraform-destroy-stage.yml@templates
