excluding md files from pipeline trigger

--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -11,6 +11,8 @@ pr:
       - alz-linux-win/
       - tests/
       - pester-tests.yaml
+    exclude:
+      - /**/*.md
 
 resources:
   repositories:
