dependabot config and versions.tf changes (#5)

--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -11,6 +11,8 @@ pr:
       - alz-linux-win/
       - tests/
       - pester-tests.yaml
+    exclude:
+      - /**/*.md
 
 resources:
   repositories:
@@ -41,7 +43,7 @@ stages:
       backendAzureRmStorageAccountName: samojtfstate001
       backendAzureRmContainerName: tfstatepullrequest
       backendAzureRmKey: "alz-vm-module-infra-tests.terraform.tfstate"
-      workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/infra-build"
+      workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/infra-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
       terraformVersion: 1.2.6
@@ -59,12 +61,13 @@ stages:
       backendAzureRmStorageAccountName: samojtfstate001
       backendAzureRmContainerName: tfstatepullrequest
       backendAzureRmKey: "alz-vm-module-tests.terraform.tfstate"
-      workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/vm-build"
+      workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/vm-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
       terraformVersion: 1.2.6
       dependsOn: [deploy_inf]
 
+  # Note that working dirs in this stage are different as they don't checkout the CI templates repo.
   - stage: Test
     dependsOn: deploy_vms
     jobs:
@@ -98,7 +101,7 @@ stages:
       backendAzureRmStorageAccountName: samojtfstate001
       backendAzureRmContainerName: tfstatepullrequest
       backendAzureRmKey: "alz-vm-module-tests.terraform.tfstate"
-      workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/vm-build"
+      workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/vm-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
       terraformVersion: 1.2.6
@@ -116,7 +119,7 @@ stages:
       backendAzureRmStorageAccountName: samojtfstate001
       backendAzureRmContainerName: tfstatepullrequest
       backendAzureRmKey: "alz-vm-module-infra-tests.terraform.tfstate"
-      workingDirectory: "$(System.DefaultWorkingDirectory)/tests/terraform/infra-build"
+      workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/infra-build"
       yamlenv: "pr_exclusivelock"
       applyTfChanges: true
       terraformVersion: 1.2.6
