adds licensing to vm resource, also pipeline and identity updates

--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -8,7 +8,7 @@ pr:
   paths:
     include:
       - alz-linux-vm/
-      - alz-linux-win/
+      - alz-win-vm/
       - tests/
       - pester-tests.yaml
     exclude:
