--- a/tests/pester-tests.yaml
+++ b/tests/pester-tests.yaml
@@ -89,38 +89,38 @@ stages:
               testResultsFiles: "$(System.DefaultWorkingDirectory)/tests/testResults.xml"
               failTaskOnFailedTests: false
 
-  - template: azdo/template-terraform-destroy-stage.yml@templates
-    parameters:
-      destroyFlag: true
-      stageName: "destroy_vms"
-      tenant_id: 0bb413d7-160d-4839-868a-f3d46537f6af
-      subscription_id: 4b068872-d9f3-41bc-9c34-ffac17cf96d6 #Devl testing
-      stageDisplayName: "Destroy VMs"
-      backendServiceArm: scVLZ
-      backendAzureRmResourceGroupName: rg-terraform-statefiles-001
-      backendAzureRmStorageAccountName: samojtfstate001
-      backendAzureRmContainerName: tfstatepullrequest
-      backendAzureRmKey: "alz-vm-module-tests.terraform.tfstate"
-      workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/vm-build"
-      yamlenv: "pr_exclusivelock"
-      applyTfChanges: true
-      terraformVersion: 1.2.6
-      dependsOn: [test]
+  # - template: azdo/template-terraform-destroy-stage.yml@templates
+  #   parameters:
+  #     destroyFlag: true
+  #     stageName: "destroy_vms"
+  #     tenant_id: 0bb413d7-160d-4839-868a-f3d46537f6af
+  #     subscription_id: 4b068872-d9f3-41bc-9c34-ffac17cf96d6 #Devl testing
+  #     stageDisplayName: "Destroy VMs"
+  #     backendServiceArm: scVLZ
+  #     backendAzureRmResourceGroupName: rg-terraform-statefiles-001
+  #     backendAzureRmStorageAccountName: samojtfstate001
+  #     backendAzureRmContainerName: tfstatepullrequest
+  #     backendAzureRmKey: "alz-vm-module-tests.terraform.tfstate"
+  #     workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/vm-build"
+  #     yamlenv: "pr_exclusivelock"
+  #     applyTfChanges: true
+  #     terraformVersion: 1.2.6
+  #     dependsOn: [test]
 
-  - template: azdo/template-terraform-destroy-stage.yml@templates
-    parameters:
-      destroyFlag: true
-      stageName: "destroy_inf"
-      tenant_id: 0bb413d7-160d-4839-868a-f3d46537f6af
-      subscription_id: 4b068872-d9f3-41bc-9c34-ffac17cf96d6 #Devl testing
-      stageDisplayName: "Destroy Supporting Resources"
-      backendServiceArm: scVLZ
-      backendAzureRmResourceGroupName: rg-terraform-statefiles-001
-      backendAzureRmStorageAccountName: samojtfstate001
-      backendAzureRmContainerName: tfstatepullrequest
-      backendAzureRmKey: "alz-vm-module-infra-tests.terraform.tfstate"
-      workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/infra-build"
-      yamlenv: "pr_exclusivelock"
-      applyTfChanges: true
-      terraformVersion: 1.2.6
-      dependsOn: [test, destroy_vms]
+  # - template: azdo/template-terraform-destroy-stage.yml@templates
+  #   parameters:
+  #     destroyFlag: true
+  #     stageName: "destroy_inf"
+  #     tenant_id: 0bb413d7-160d-4839-868a-f3d46537f6af
+  #     subscription_id: 4b068872-d9f3-41bc-9c34-ffac17cf96d6 #Devl testing
+  #     stageDisplayName: "Destroy Supporting Resources"
+  #     backendServiceArm: scVLZ
+  #     backendAzureRmResourceGroupName: rg-terraform-statefiles-001
+  #     backendAzureRmStorageAccountName: samojtfstate001
+  #     backendAzureRmContainerName: tfstatepullrequest
+  #     backendAzureRmKey: "alz-vm-module-infra-tests.terraform.tfstate"
+  #     workingDirectory: "$(System.DefaultWorkingDirectory)/staff-infrastructure-alz-terraform-vm/tests/terraform/infra-build"
+  #     yamlenv: "pr_exclusivelock"
+  #     applyTfChanges: true
+  #     terraformVersion: 1.2.6
+  #     dependsOn: [test, destroy_vms]
